--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "custom-electron-titlebar": "^3.2.2-hotfix62",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
